--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,13 @@ tools:context="com.example.android.mathquizproject.MainActivity">
     android:orientation="vertical">
 
     <TextView
+        style="@style/MainTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/main_title"
+        android:gravity="center"/>
+
+    <TextView
         style="@style/QuestionHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
