--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,6 +25,13 @@
     </style>
 
 
+    <style name="MainTitle">
+        <item name="android:textSize">30sp</item>
+        <item name="android:textColor">#1B5E20</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_margin">16dp</item>
+    </style>
+
     <style name="QuestionHeader">
         <item name="android:textSize">24sp</item>
         <item name="android:textColor">#212121</item>
